--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,4 @@ rtree>=0.9.7  # needed for trimesh contains method
 networkx>=2.3
 pybullet==3.1.3
 # git+https://github.com/Improbable-AI/airobot.git@qa
+pytest>=7.3
